<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_sup"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="1dp"
    android:background="@color/whiteDarck"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="1dp">

    <TextView
        android:id="@+id/txtMika"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:fontFamily="serif"
        android:layout_marginStart="10dp"
        android:text="@string/mika"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPeluqueros"
        android:layout_width="135dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:text="@string/peluqueros"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txtMika"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtHola"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        android:text="@string/hola"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtCorreo" />

</androidx.constraintlayout.widget.ConstraintLayout>