<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackLight"
    tools:context=".menu_principal">

    <include layout="@layout/menu_sup"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_column="0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="6">

                <Button
                    android:id="@+id/b_FichasActivas"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/grey"
                    android:onClick="ir_fichas_activas"
                    android:shape="rectangle"
                    android:text="@string/fichas_activas"
                    android:textSize="31sp" />

                <Button
                    android:id="@+id/b_NuevaFicha"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/grey"
                    android:onClick="ir_agregar_usuario"
                    android:text="@string/nueva_ficha"
                    android:textSize="31sp" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_column="0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="6">

                <Button
                    android:id="@+id/b_CerrarSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/grey"
                    android:onClick="ir_cerrar_sesion"
                    android:text="@string/cerrar_sesion"
                    android:textSize="31sp" />

                <Button
                    android:id="@+id/b_Sincronizar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/grey"
                    android:onClick="ir_sincronizar"
                    android:text="@string/sincronizar"
                    android:textSize="31sp" />

            </LinearLayout>

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>