<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackLight"
    tools:context=".seleccion_cliente">

    <include layout="@layout/menu_sup"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_weight="1"
                android:weightSum="6">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="5"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:textColor="@color/whiteDarck"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextNombre"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:inputType="text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/telefono"
                        android:textColor="@color/whiteDarck"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:inputType="text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/whiteDarck"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextSEmail"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:background="@color/white"
                        android:inputType="textEmailAddress"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/b_AgregarCliente"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="70dp"
                        android:backgroundTint="@color/grey"
                        android:layout_marginTop="30dp"
                        android:textSize="23sp"
                        android:textAllCaps="false"
                        android:text="@string/nuevo_cliente" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_gravity="top">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="88dp"
                            android:background="@color/black">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="79dp"
                                android:layout_height="59dp"
                                android:layout_marginTop="15dp"
                                app:srcCompat="@drawable/usuario" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="79dp"
                                android:layout_height="34dp"
                                android:layout_marginTop="30dp"
                                android:text="@string/cliente"
                                android:textColor="@color/white"
                                android:textSize="24sp" />

                            <EditText
                                android:id="@+id/lupaCliente"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="50dp"
                                android:layout_marginTop="30dp"
                                android:layout_marginEnd="20dp"
                                android:background="@color/white"
                                android:ems="10"
                                android:hint="@string/buscar"
                                android:inputType="text"
                                android:textSize="24sp" />
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_column="0"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ListView
                                    android:id="@+id/lista_de_clientes"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/white" />

                            </LinearLayout>

                        </TableRow>
                    </TableLayout>

                </LinearLayout>


            </LinearLayout>


        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>